fix: add missing selector for dark mode styles

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -24,6 +24,7 @@ $font-schoolbell: 'Schoolbell', cursive;
   --Bibliotecas: #8b8b8b;
 }
 
+html.dark,
 .dark {
   --bg-color: #0f0f0f;
   --text-color: #d4d4d4;
